--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Build the library and examples
       - name: Build amCharts 5 examples
         run: |
           npm run build
-          npm run build:examples || echo "No build:examples script, examples built in main build"
+          npm run build:examples || echo "No build:examples script, examples built in main"
 
-      # Deploy only the built examples folder
+      - name: List dist folder contents for debugging
+        run: |
+          echo "Listing dist folder contents:"
+          ls -R ./dist || echo "dist folder not found"
+
+      - name: List examples folder contents for debugging
+        run: |
+          echo "Listing dist/examples folder contents:"
+          ls -R ./dist/examples || echo "dist/examples folder not found"
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
